# quant-trading

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: deploy-after-changes.mdc
.github/workflows/: ecs-quant-deploy.yml
config/: portfolio_holdings.json
deploy/ecs/: README.md  cloud-assistant-bootstrap-git.sh  cloud-assistant-deploy.sh  cloud-assistant-lib.sh  cloud-assistant-run.sh  cloud-assistant-setup.sh  cloud-assistant.env.example  deploy-remote.sh  fund-stack.env.example  (+8 more)
examples/: backfill_cn_index_amount.py  backfill_cn_index_amount_tx.py  backfill_cn_index_full_history.py  backfill_fund_aum.py  backfill_fund_holdings_global.py  backfill_industry_pe_cninfo.py  check_index_dates.py  fix_sector_flow_amount_units.py  rebuild_fund_stock_popularity.py  run_backtest.py  run_crawler.py  run_web.py  test_deepseek_enable_search.py  test_qwen_max_enable_search.py
scripts/: daily_fund_advisor.py  test_dingtalk_push.py
tests/: test_backtest_api.py  test_backtest_registry.py  test_backtest_service.py  test_fund_aum.py  test_fund_catalog_categories.py  test_fund_holdings_dedupe.py  test_fund_holdings_search.py  test_fund_stock_popularity.py  test_fund_web_spa_api.py  test_hk_stock_daily_sync.py  test_market_index_bars_query.py  test_market_index_intraday_live.py  test_sector_flow.py  test_stock_basic.py  test_stock_daily_sync.py  test_stock_industry_em.py  test_stock_industry_options.py  test_stock_industry_sync.py  test_stock_queries_board.py  test_time_util.py  test_us_stock_daily_sync.py  test_volume_surge_strategy.py
(+151 files in other folders)
