[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.1.0"
description = "Minimal quantitative trading scaffold: data → strategy → backtest"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
