[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.1.0"
description = "Minimal quantitative trading scaffold: data → strategy → backtest"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
web = [
    "akshare>=1.13",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "pymysql>=1.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
]
crawler = [
    "akshare>=1.13",
    "apscheduler>=3.10",
    "requests>=2.31",
    "openpyxl>=3.1",
    "pymysql>=1.1",
    "sqlalchemy>=2.0",
    "xlrd>=2.0",
    "yfinance>=0.2",
]

[project.scripts]
quant-trading-web = "quant_trading.funds.cli:main"
fund-crawler = "fund_platform.crawler_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
